<resources>
    <string name="splash_login_kakao_button">카카오로 로그인하기</string>
    <string name="splash_login_google_button">구글로 로그인하기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_info">정보가 없습니다</string>
    <string name="restaurant_info_location_label">식당 위치</string>
    <string name="restaurant_info_operation_time_label">영업 시간</string>
    <string name="menu_group_empty">해당 시간대의 메뉴가 없습니다.</string>
    <string name="menu_group_price">Price</string>
    <string name="menu_group_rate">Rate</string>
    <string name="menu_group_like">Like</string>
    <string name="setting_siksha">식샤 설정</string>
    <string name="setting_siksha_info">식샤 정보</string>
    <string name="setting_setting_account">계정 관리</string>
    <string name="setting_setting_user_setting">프로필 관리</string>
    <string name="setting_restaurant">식당 설정</string>
    <string name="setting_using_latest_version">최신버전을 이용중입니다.</string>
    <string name="setting_need_update">업데이트가 필요합니다.</string>
    <string name="setting_reorder_restaurant_title">식단 순서 변경</string>
    <string name="setting_reorder_favorite_title">즐겨찾기 순서 변경</string>
    <string name="setting_reorder_restaurant_label">원하는 식당을 숨기거나\n 우측 손잡이를 드래그하여 순서를 바꿀 수 있어요.</string>
    <string name="setting_voc_title">1:1 문의하기</string>
    <string name="setting_voc_leave_message">문의할 내용을 남겨주세요.</string>
    <string name="setting_voc_hint">문의할 내용을 작성해주세요.</string>
    <string name="setting_voc_send_voc">전송하기</string>
    <string name="send_voc_success">문의가 정상적으로 등록되었습니다.</string>
    <string name="setting_dialog_logout_title">로그아웃</string>
    <string name="setting_dialog_logout_content">정말로 로그아웃 하시겠습니까?</string>
    <string name="setting_dialog_logout_proceed">로그아웃</string>
    <string name="setting_dialog_logout_cancel">취소</string>
    <string name="setting_dialog_withdrawal_title">회원탈퇴</string>
    <string name="setting_dialog_withdrawal_content">회원 탈퇴 시 이 계정으로 등록된 모든 리뷰가 삭제됩니다.</string>
    <string name="setting_dialog_withdrawal_proceed">탈퇴하기</string>
    <string name="setting_dialog_withdrawal_cancel">취소</string>
    <string name="menu_detail_review_label">메뉴평가</string>
    <string name="leave_review_title">나의 평가 남기기</string>
    <string name="leave_review_keyword_description">어떤 점이 얼마나 좋았나요?</string>
    <string name="leave_review_description">식단 한 줄 평을 함께 남겨보세요!</string>
    <string name="leave_review_button">평가 등록</string>
    <string name="leave_review_star_description">별점을 선택해주세요.</string>
    <string name="leave_review_how_about_with_bottom">은 </string>
    <string name="leave_review_how_about_wo_bottom">는 </string>
    <string name="leave_review_how_about">어땠나요?</string>
    <string name="leave_review_quote">\'</string>
    <string name="leave_review_add_photo">사진 추가</string>
    <string name="leave_review_max_image_toast">사진은 최대 3개까지 등록할 수 있습니다.</string>
    <string name="leave_review_success">평가가 등록되었습니다.</string>
    <string name="menu_detail_toolbar">리뷰</string>
    <string name="menu_detail_no_review">아직 해당 메뉴의 리뷰가 없습니다.\n리뷰를 남겨보세요</string>
    <string name="menu_detail_review_people_total">총</string>
    <string name="menu_detail_review_people_count">명</string>
    <string name="menu_detail_review_people_has_reviewed">이 평가했어요!</string>
    <string name="menu_detail_photo_review_gather">사진 리뷰</string>
    <string name="menu_detail_review_gather">리뷰</string>
    <string name="menu_detail_plus">+</string>
    <string name="menu_detail_more_photo">건 더 보기</string>
    <string name="menu_detail_review_prefix">후기</string>
    <string name="menu_detail_review_suffix">개</string>
    <string name="review_photo_title">사진 리뷰</string>
    <string name="review_title">리뷰</string>
    <string name="review_nothing">리뷰가 없습니다.</string>
    <string name="my_review_title">나의 평가 관리</string>
    <string name="reorder_no_restaurant">순서를 지정할 식당이 없습니다.</string>
    <string name="favorite_empty">즐겨찾기에 추가된 식당이 없습니다.</string>
    <string name="common_network_error">네트워크 연결이 불안정합니다.</string>
    <string name="common_unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="leave_review_hint">식단 평가</string>
    <string name="leave_review_text_count">%1$d 자 / %2$d 자</string>
    <string name="common_back">돌아가기</string>
    <string name="common_continue">진행하기</string>
    <string name="date_fallback">…</string>
    <string name="daily_restaurant_no_menus">해당 시간대의 메뉴가 없습니다.</string>
    <string name="menu_detail_leave_review_button">나의 평가 남기기</string>
    <string name="content_no_fork">no fork</string>
    <string name="operating_hour_weekdays">주중</string>
    <string name="operating_hour_saturday">토요일</string>
    <string name="operating_hour_holiday">휴일</string>
    <string name="calendar_view_monday">MON</string>
    <string name="calendar_view_tuesday">TUE</string>
    <string name="calendar_view_wednesday">WED</string>
    <string name="calendar_view_thursday">THU</string>
    <string name="calendar_view_friday">FRI</string>
    <string name="calendar_view_saturday">SAT</string>
    <string name="calendar_view_sunday">SUN</string>
    <string name="daily_restaurant_breakfast">아침</string>
    <string name="daily_restaurant_lunch">점심</string>
    <string name="daily_restaurant_dinner">저녁</string>
    <string name="splash_kakao_login_failed">카카오 로그인 실패</string>
    <string name="splash_google_login_failed">구글 로그인 실패</string>
    <string name="logout_failed">로그아웃에 실패하였습니다.</string>
    <string name="signout_failed">탈퇴에 실패하였습니다.\n연속하여 실패할 경우 관리자에게 문의해주세요.</string>
    <string name="community_board_empty">아직 아무도 글을 작성하지 않았어요.</string>
    <string name="community_board_error">글을 불러오는 중 문제가 발생하였습니다.</string>
    <string name="community_retry_button">다시 시도</string>
    <string name="community_post_like">공감</string>
    <string name="community_comment_send_button">올리기</string>
    <string name="community_comment_hint">댓글을 입력하세요.</string>
    <string name="community_comment_anonymous">익명</string>
    <string name="community_create_screen_title">글쓰기</string>
    <string name="community_create_title_placeholder">제목</string>
    <string name="community_create_content_placeholder">내용을 입력하세요.</string>
    <string name="community_create_success">글을 올렸습니다.</string>
    <string name="community_create_anonymous">익명</string>
    <string name="community_create_submit_content">OK</string>
    <string name="community_create_image_idx">번째 이미지</string>
    <string name="community_create_title_length_warning">제목은 200자를 넘길 수 없습니다.</string>
    <string name="community_post_detail_dialog_edit">수정하기</string>
    <string name="community_post_detail_dialog_delete">삭제하기</string>
    <string name="community_post_detail_dialog_report">신고하기</string>
    <string name="community_post_delete_dialog_title">게시글 삭제</string>
    <string name="community_post_delete_dialog_description">게시글을 정말 삭제하시겠습니까?</string>
    <string name="community_comment_delete_dialog_title">댓글 삭제</string>
    <string name="community_comment_delete_dialog_description">댓글을 정말 삭제하시겠습니까?</string>
    <string name="community_comment_unavailable">신고가 누적되어 숨겨진 댓글입니다.</string>
    <string name="version_text">siksha-%s</string>
    <string name="image_viewer_current_page">%1$d/%2$d</string>
    <string name="nickname_hint">닉네임을 입력하세요</string>
    <string name="kakao_app_key">efa8f59f5de6e39bb0977d2e1ee505d7</string>
    <string name="kakao_scheme">kakaoefa8f59f5de6e39bb0977d2e1ee505d7</string>
    <string name="kakaolink_host">kakaolink</string>
</resources>