<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.LinearLayout">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/left_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="2dp"
                android:src="@drawable/ic_left_arrow_orange" />

            <TextView
                android:id="@+id/year_month_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nanum_square_extra_bold"
                android:textSize="15dp"
                android:textColor="@color/orange_main"
                tools:text="2021.03." />

            <ImageView
                android:id="@+id/right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="2dp"
                android:src="@drawable/ic_right_arrow_orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_sunday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_monday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_tuesday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_wednesday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_thursday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_friday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calendar_view_saturday"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13dp"
                android:textColor="@color/gray_900"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/week_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_week"
            tools:itemCount="5"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

</merge>