<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/orange_normal" >

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_bold"
            android:text="@string/setting_voc_title"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20dp" />

        <!-- textview 양옆 마진 맞추기용 -->
        <ImageView
            android:id="@+id/back_button_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:src="@drawable/ic_back_arrow"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_voc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_bold"
            android:textColor="@color/gray_700"
            android:textSize="20dp"
            android:text="@string/setting_voc_leave_message"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_review_profile"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_bold"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_marginStart="5dp"
            tools:text="ID 1234"
            app:layout_constraintStart_toEndOf="@id/profile_icon"
            app:layout_constraintTop_toTopOf="@id/profile_icon"
            app:layout_constraintBottom_toBottomOf="@id/profile_icon" />

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/frame_review_item"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColorHint="@color/gray_500"
            android:maxLength="500"
            android:minHeight="280dp"
            android:padding="12dp"
            android:textColor="@color/gray_900"
            android:textSize="14dp"
            android:hint="@string/setting_voc_hint"
            android:fontFamily="@font/nanum_square_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_icon" />

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nanum_square_light"
            android:textColor="@color/gray_700"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/comment_edit"
            app:layout_constraintBottom_toBottomOf="@+id/comment_edit"
            tools:text="10 자 / 500 자" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_leave_review_button"
        android:fontFamily="@font/nanum_square_extra_bold"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:paddingVertical="20dp"
        android:text="@string/setting_voc_send_voc"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</LinearLayout>