<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.menu_detail.LeaveReviewFragment">

    <LinearLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/nanum_square_bold"
            android:text="@string/leave_review_title"
            android:textColor="@color/gray_900"
            android:textSize="22sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/nanum_square_bold"
                android:textColor="@color/gray_900"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보제육보" />

            <com.wafflestudio.siksha2.components.RatingStarsView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="4dp"
                app:dragEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_title"
                app:starSize="large" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:src="@drawable/ic_text_bubble"
                app:layout_constraintBottom_toBottomOf="@id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/nanum_square_bold"
                android:text="@string/leave_review_description"
                android:textColor="@color/gray_700"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/rating" />

            <EditText
                android:id="@+id/comment_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/frame_review_item"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/leave_review_hint"
                android:textColorHint="@color/gray_500"
                android:maxLength="150"
                android:minHeight="150dp"
                android:padding="12dp"
                android:textColor="@color/gray_900"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/text_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/nanum_square_light"
                android:textColor="@color/gray_700"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/comment_edit"
                app:layout_constraintTop_toBottomOf="@+id/comment_edit"
                tools:text="10 자 / 150 자" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_horizontal_gradient"
        android:fontFamily="@font/nanum_square_extra_bold"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:paddingVertical="20dp"
        android:text="@string/leave_review_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>